charts/kokoro/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kokoro
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kokoro
  labels:
    app: kokoro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kokoro
  template:
    metadata:
      labels:
        app: kokoro
    spec:
      containers:
        - image: ghcr.io/eduardolat/kokoro-web
          imagePullPolicy: IfNotPresent
          name: kokoro
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: kokoro-cache
              mountPath: /kokoro/cache
      volumes:
        - name: kokoro-cache
          persistentVolumeClaim:
            claimName: kokoro-cache
---
apiVersion: v1
kind: Service
metadata:
  name: kokoro
  labels:
    app: kokoro
spec:
  selector:
    app: kokoro
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
